<resources>
    <string name="app_name">Dr. Application</string>
    <string name="todo1">TODO1</string>
    <string name="welcome_text">DYNAMIC HEALTH</string>
    <string name="todo2">TODO2</string>
    <string name="user_login">SIGN IN</string>
    <string name="user_signup">SIGN UP</string>
    <string name="user">USER</string>
    <string name="doctor">DOCTOR</string>
    <string name="todo3">TODO3</string>
    <string name="first_name">Enter first name</string>
    <string name="middle_name">Enter middle name</string>
    <string name="last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="phn_no">Enter Phone no.</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_detail">Enter Details</string>
    <string name="login_button">Login</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="Doctor_next">Next</string>
    <string name="todo4">TODO4</string>
    <string name="degree_name">Enter your degree name</string>
    <string name="enter_specialization">Enter your specialization</string>
    <string name="year_experience">No. of year of experience</string>
    <string name="Dr.present_work">"Presently working "</string>
    <string name="enter_Qualificatiton">Qualification Details</string>
    <string name="todo5">TODO5</string>
    <string name="name">Name:</string>
    <string name="degree">Degree:</string>
    <string name="specialization">Specialization:</string>
    <string name="experience">Experience:</string>
    <string name="presently">Present:</string>
    <string name="phone">Mobile no:</string>
</resources>