<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <ImageView
              android:id="@+id/doctor_pic"
              android:layout_width="130dp"
              android:layout_height="170dp"
              android:contentDescription="@string/todo5" />
            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_toEndOf="@+id/doctor_pic"
                android:layout_marginStart="20dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/doctor_pic"
                android:layout_below="@+id/full_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/degree"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/specialization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/doctor_pic"
                android:layout_below="@+id/degree"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/specialization"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/doctor_pic"
                android:layout_below="@+id/specialization"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/experience"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/doctor_pic"
                android:layout_below="@+id/experience"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/presently"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/doctor_pic"
                android:layout_below="@+id/present"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>