<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DoctorSignUP"
    android:background="#CFD8DC">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_detail"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="22sp"
        />

    <EditText
        android:id="@+id/Doctorfirst_name"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_button"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/Doctormiddle_name"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_below="@+id/Doctorfirst_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:hint="@string/middle_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="italic" />
    <EditText
        android:id="@+id/Doctorlast_name"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Doctormiddle_name"
        android:background="@drawable/rounded_button"
        android:hint="@string/last_name"
        android:textStyle="italic"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/Doctorphone_no"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_below="@+id/Doctorlast_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:hint="@string/phn_no"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/Doctoremail_id"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_below="@+id/Doctorphone_no"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:textStyle="italic"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/Doctorpassword"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/Doctoremail_id"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:textStyle="italic"
        android:importantForAutofill="no"/>
    <Button
        android:id="@+id/next_Button"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_below="@+id/Doctorpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Doctor_next" />


</RelativeLayout>