<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_text"
        android:textColor="#121010"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/WelcomeImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/istockphoto"
        android:contentDescription="@string/todo1" />

    <Button
        android:id="@+id/userLoginButtonId"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/user_login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/doctorLoginId"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeImage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/dr_login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>